--- a/views/search.pug
+++ b/views/search.pug
@@ -15,6 +15,6 @@ html
             p= track.artists
             p= track.album
           .track-download
-            a(href=track.preview_url,target="_blank") 
+            a(href=track.preview_url,target="_blank",download="asdf.mp3") 
               | DOWNLOAD
               span 30s preview
